alpaca-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpaca
spec:
  replicas: 3
  selector:
    matchLabels:
      app: alpaca
  template:
    metadata:
      labels:
        app: alpaca
    spec:
      containers:
        - name: alpaca
          image: gcr.io/kuar-demo/kuard-amd64:green
          ports:
            - containerPort: 8080
