alpaca-test-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpaca-test
  labels:
    ver: '2'
    app: alpaca
    env: test
spec:
  replicas: 1
  selector:
    matchLabels:
      ver: '2'
      app: alpaca
      env: test
  template:
    metadata:
      labels:
        ver: '2'
        app: alpaca
        env: test
    spec:
      containers:
      - name: alpaca-test
        image: gcr.io/kuar-demo/kuard-amd64:green
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
