bandicoot-staging-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bandicoot-staging
  labels:
    ver: "2"
    app: bandicoot
    env: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      ver: "2"
      app: bandicoot
      env: staging
  template:
    metadata:
      labels:
        ver: "2"
        app: bandicoot
        env: staging
    spec:
      containers:
        - name: bandicoot-staging
          image: gcr.io/kuar-demo/kuard-amd64:green
          #resources:
          #limits:
          #memory: "128Mi"
          #cpu: "500m"
          ports:
            - containerPort: 8080
