be-default-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: be-default
  template:
    metadata:
      labels:
        app: be-default
    spec:
      containers:
        - name: be-default
          image: gcr.io/kuar-demo/kuard-amd64:blue
          ports:
            - containerPort: 8080
