kuard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
spec:
  replicas: 3
  # Fazemos rollouts diários, portanto, limitaremos o histórico de
  # versões para duas semanas, pois não pretendemos fazer rollouts
  # para versões anteriores a esse período.
  revisionHistoryLimit: 14
  selector:
    matchLabels:
      run: kuard
  template:
    metadata:
      labels:
        run: kuard
      annotations:
        kubernetes.io/change-cause: "Update to blue kuard"
    spec:
      containers:
        - name: kuard
          image: gcr.io/kuar-demo/kuard-amd64:blue
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
