mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: mongo
  replicas: 3
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongodb
          #image: mongo:3.4.1
          image: mongo:4.0.28
          command:
            - mongod
            - --replSet
            - rs0
          ports:
            - containerPort: 27017
              name: web
          livenessProbe:
            exec:
              command:
                - /usr/bin/mongo
                - --eval
                - db.serverStatus()
            initialDelaySeconds: 10
            timeoutSeconds: 10
        # Este contêiner inicializa o servidor mongodb e, em seguida, dorme.
        - name: init-mongo
          #image: mongo:3.4.1
          image: mongo:4.0.28
          command:
            - bash
            - /config/init.sh
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          configMap:
            name: "mongo-init"
