pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
    app: helloworld
    version: "v1"
spec:
  containers:
    - name: myapp
      image: kelseyhightower/helloworld:v1
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 80
