external-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-ip-database
subsets:
  - addresses:
      - ip: 192.168.0.1
    ports:
      - port: 3306
