service-queue.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: work-queue
    component: queue
    chapter: jobs
  name: queue
spec:
  selector:
    app: work-queue
    component: queue
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
