simple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  rules:
    - host: "*"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: alpaca
                port:
                  number: 8080
